Add Stitch - Experiment 626

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">65</span>/65 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">66</span>/66 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">65</span>/65 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">66</span>/66 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -847,6 +847,17 @@
           correctedText: "Chaque fois <mark>qu'un</mark> adversaire joue un personnage, infligez 1 dommage à ce personnage-ci.",
           officialCorrection: "Aucune",
           number: "146/204 · FR · 8",
+        },
+        {
+          filters: "set8 saphir capacite impact-non correction-aucune",
+          name: "Stitch",
+          version: "Expérience 626",
+          sorting: "Stitch - Experience 626",
+          image: "images/008_166.jpg",
+          incorrectText: "Lorsque vous jouez ce personnage, chaque adversaire place la carte du dessus de sa pioche dans sa réserve d'encre, face cachée et <mark>épuisé</mark>.<br />&nbsp;<br />Au début de votre tour, si cette carte est dans votre défausse, vous pouvez défausser une carte <img style=\"width: 1em;\" src=\"images/C.svg\" /> pour jouer <mark>cette carte-ci</mark> gratuitement et <mark>épuisée</mark>.",
+          correctedText: "Lorsque vous jouez ce personnage, chaque adversaire place la carte du dessus de sa pioche dans sa réserve d'encre, face cachée et <mark>épuisée</mark>.<br />&nbsp;<br />Au début de votre tour, si cette carte est dans votre défausse, vous pouvez défausser une carte <mark>avec </mark><img style=\"width: 1em;\" src=\"images/C.svg\" /> pour jouer <mark>ce personnage-ci</mark> gratuitement et <mark>il entre en jeu épuisé</mark>.",
+          officialCorrection: "Aucune",
+          number: "166/204 · FR · 8",
         },
       ];
 
